去除预览功能的类—Record和预览方法-instanceOf