@@ -1,5 +1,9 @@
 package com.dake.springboot.po;
 
+// 记录 是预览功能，默认情况下禁用。
+//  （请使用 --enable-preview 以启用 记录）
+/*
 record Person(int age, String height) {
 }
+*/
 
